Fixing findbugs issues in the code